izmena u elementima i stilu

--- a/templates/index.html
+++ b/templates/index.html
@@ -184,7 +184,7 @@
               <div class="sign-in-htm">
                   <form method="POST" action="">
                       <div class="subtitle">Let's create your account!</div>
-                      <div class="input-container ic1 ">
+                      <!-- <div class="input-container ic1 ">
                           <input type="text" id="inputName" class="input" maxlength="28" type="text" placeholder=" " />
                           <div class="cut" style="width: 85px;"></div>
                           <label for="firstname" class="placeholder">First name</label>
@@ -193,17 +193,17 @@
                           <input type="text" id="inputLanme" class="input" maxlength="38" placeholder=" " />
                           <div class="cut" style="width: 80px;"></div>
                           <label for="lastname" class="placeholder">Last name</label>
-                      </div>
+                      </div> -->
                       <div class="input-container ic2 ">
                           <input type="text" id="inputEmail" class="input" maxlength="28" placeholder=" " />
                           <div class="cut cut-short"></div>
                           <label for="email" class="placeholder">Email</>
                       </div>
-                      <div class="input-container ic2 ">
+                      <!-- <div class="input-container ic2 ">
                           <input type="number" id="phonNumber" class="input" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');" maxlength="15" placeholder=" " />
                           <div class="cut cut-short" style="width: 55px;"></div>
                           <label for="Phone" class="placeholder">Phone</>
-                      </div>
+                      </div> -->
                       <div class="input-container ic2 ">
                           <input type="password" id="inputPassword" class="input" maxlength="12" placeholder=" " />
                           <div class="cut" style="width: 80px;"></div>
