dodato about profile sekcija

--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -294,6 +294,15 @@
                                                 <!-- <input type="" value="" id="userDescriptionInput" class="form-control hide"> -->
                                             </div>
                                         </div>
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label>About</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p id="userAbout">About my profile</p>
+                                                <textarea id="userAboutInput" class="form-control hide"> About my profile</textarea>
+                                            </div>
+                                        </div>
                                         
                                     </form>
                             </div>
